fix table view of show/index on smaller screen

--- a/app/assets/stylesheets/sidebar.sass
+++ b/app/assets/stylesheets/sidebar.sass
@@ -112,3 +112,13 @@
       @extend .nav-active
       margin-left: 0px !important
       padding-left: 0px !important
+@media (max-width: 768px)
+  .footer-navigation
+    .footer-sidebar
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      width: 100%
+   
+      .actions
+        width: 50%
